[gd_scene load_steps=5 format=2]

[ext_resource path="res://Graphics/Objects/Forest_HorizontalMovingPlatform.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Objects/HorizontalMovingPlatform.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 55, 31 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 56, 33 )

[node name="HorizontalMovingPlatform" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 5
motion/sync_to_physics = true
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 56, 22 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
self_modulate = Color( 0.545098, 0, 1, 1 )
position = Vector2( 56, 32 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 56, 33 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 3.0
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
